[CSM Portal] Add timeout for engineer chat popups
